<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.QuestionsListFragment">

    <TextView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:drawablePadding="@dimen/_8sdp"
        android:text="@string/marks"
        android:textAllCaps="true"
        android:textColor="@color/color_black"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_chapter_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:drawablePadding="@dimen/_8sdp"
        android:text="@string/gravitation"
        android:textAllCaps="false"
        android:textColor="@color/color_black"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:drawableEndCompat="@drawable/ic_apple"
        app:layout_constraintStart_toStartOf="@id/img_logo"
        app:layout_constraintTop_toBottomOf="@id/img_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_232_qs_low_input_high_output_chapter"
        android:textAllCaps="false"
        android:textColor="@color/color_grey"
        android:textSize="@dimen/_8ssp"
        app:layout_constraintStart_toStartOf="@id/img_logo"
        app:layout_constraintTop_toBottomOf="@id/text_chapter_name" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_questions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/_22sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_filter"
        tools:listitem="@layout/item_question" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/recycler_view_questions"
        app:layout_constraintEnd_toEndOf="@id/recycler_view_questions"
        app:layout_constraintStart_toStartOf="@id/recycler_view_questions"
        app:layout_constraintTop_toTopOf="@id/recycler_view_questions">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                layout="@layout/item_shimmer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                layout="@layout/item_shimmer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp" />

            <include
                layout="@layout/item_shimmer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp" />

            <include
                layout="@layout/item_shimmer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp" />

            <include
                layout="@layout/item_shimmer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_24sdp" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <TextView
        android:id="@+id/txt_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:padding="@dimen/_8sdp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/not_attempted"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_editor_absoluteX="274dp" />

</androidx.constraintlayout.widget.ConstraintLayout>