<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.QuestionDetailFragment">

    <ImageView
        android:id="@+id/btn_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:background="@drawable/background_option"
        android:contentDescription="@string/app_name"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/btn_navigation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_navigation"
        app:tint="@color/color_primary_blue" />

    <ImageView
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/background_option"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        android:padding="@dimen/_6sdp"
        android:src="@drawable/ic_forward"
        app:layout_constraintBottom_toBottomOf="@+id/btn_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_navigation"
        app:tint="@color/color_primary_blue" />


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@drawable/background_option"
                android:contentDescription="@string/app_name"
                android:padding="@dimen/_4sdp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/color_primary_blue" />

            <TextView
                android:id="@+id/txt_question_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="@+id/btn_back"
                app:layout_constraintTop_toBottomOf="@+id/btn_back"
                tools:text="Q1 (Single Correct)" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/gravitation"
                android:textColor="@color/color_black"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_back"
                app:layout_constraintStart_toEndOf="@+id/btn_back"
                app:layout_constraintTop_toTopOf="@+id/btn_back" />

            <TextView
                android:id="@+id/txt_question"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:textColor="@color/color_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/txt_question_number"
                app:layout_constraintTop_toBottomOf="@+id/txt_question_number"
                tools:text="What do you understand by the static or frictional electricity ?" />

            <TextView
                android:id="@+id/txt_paper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:background="@drawable/background_paper"
                android:padding="@dimen/_6sdp"
                android:textColor="@color/color_primary_blue"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="@+id/txt_question"
                app:layout_constraintTop_toBottomOf="@id/txt_question"
                tools:text="JEE Main 2020" />

            <TextView
                android:id="@+id/txt_option1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:background="@drawable/background_option"
                android:drawablePadding="@dimen/_12sdp"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/color_black"
                app:drawableStartCompat="@drawable/ic_option_a_"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/txt_paper"
                app:layout_constraintTop_toBottomOf="@id/txt_paper"
                tools:text="OPTION 1" />

            <TextView
                android:id="@+id/txt_option2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:background="@drawable/background_option"
                android:drawablePadding="@dimen/_12sdp"
                android:padding="@dimen/_10sdp"
                android:paddingTop="@dimen/_6sdp"
                android:paddingBottom="@dimen/_6sdp"
                android:textColor="@color/color_black"
                app:drawableStartCompat="@drawable/ic_option_b"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/txt_paper"
                app:layout_constraintTop_toBottomOf="@id/txt_option1"
                tools:text="OPTION 3" />

            <TextView
                android:id="@+id/txt_option3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:background="@drawable/background_option"
                android:drawablePadding="@dimen/_12sdp"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/color_black"
                app:drawableStartCompat="@drawable/ic_option_c"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/txt_paper"
                app:layout_constraintTop_toBottomOf="@id/txt_option2"
                tools:text="OPTION 1" />

            <TextView
                android:id="@+id/txt_option4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_18sdp"
                android:background="@drawable/background_option"
                android:drawablePadding="@dimen/_12sdp"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/color_black"
                app:drawableStartCompat="@drawable/ic_option_d"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/txt_paper"
                app:layout_constraintTop_toBottomOf="@id/txt_option3"
                tools:text="OPTION 1" />

            <TextView
                android:id="@+id/txt_solution"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_22sdp"
                android:layout_marginBottom="@dimen/_46sdp"
                android:textColor="@color/color_black"
                android:textSize="@dimen/_12ssp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/txt_option4"
                app:layout_constraintStart_toStartOf="@id/txt_option4"
                app:layout_constraintTop_toBottomOf="@id/txt_option4"
                tools:text="This is the solution text. Adding some more dummy text to make it look like a detailed solution. I guess, that’s it for now!" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/view_stub"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_green">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.37"
                app:srcCompat="@drawable/ic_spark" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="You’re on a streak! \n 3 correct answers  in a row"
                android:textAlignment="center"
                android:textColor="@color/color_white"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_28sdp"
                android:layout_marginTop="16dp"
                android:text="@string/view_solution"
                android:textAllCaps="false"
                android:textColor="@color/color_black"
                android:textStyle="bold"
                app:backgroundTint="@color/color_white"
                app:cornerRadius="@dimen/_6sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/_28sdp"
                android:text="@string/next_question"
                android:textAllCaps="false"
                android:textStyle="bold"
                app:backgroundTint="@color/color_primary_blue"
                app:cornerRadius="@dimen/_6sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <TextView
        android:id="@+id/txt_message"
        android:layout_width="0dp"
        android:layout_height="@dimen/_50sdp"
        android:alpha="0.85"
        android:background="@color/color_green"
        android:gravity="center"
        android:text="@string/you_get_it_right"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_6sdp"
        android:backgroundTint="@color/color_light_grey"
        android:clickable="false"
        android:paddingStart="@dimen/_18sdp"
        android:paddingTop="@dimen/_4sdp"
        android:paddingEnd="@dimen/_18sdp"
        android:paddingBottom="@dimen/_4sdp"
        android:text="@string/check_answer"
        android:textAllCaps="false"
        android:textColor="@color/color_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>